# beginner_tutorials_msgs

./: CMakeLists.txt  package.xml
msg/: test.msg
